# starch2

./: LICENCE  Makefile  README.md  pyproject.toml  starch2.py  tables.py  test.py  test_functional.py  test_starch2.py
starch/: main.py  starch.py  tables.py  utils.py  world.py
starch2/: main.py  tables.py
test/: test_functional.py  test_main.py
tests/: test_functional.py  test_starch.py  test_utils.py  test_world.py
